--- a/tip-calculator/styles/components/index.html
+++ b/tip-calculator/styles/components/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="../base.css" />
     <link rel="stylesheet" href="../objects.css" />
     <link rel="stylesheet" href="./button.css" />
+    <link rel="stylesheet" href="./input.css" />
   </head>
   <body>
-    <button class="button">10%</button>
-    <button class="button button--secondary">Adios</button>
+    <input class="input" placeholder="0" />
   </body>
 </html>
