--- a/tip-calculator/styles/components/index.html
+++ b/tip-calculator/styles/components/index.html
@@ -10,8 +10,12 @@
     <link rel="stylesheet" href="../objects.css" />
     <link rel="stylesheet" href="./button.css" />
     <link rel="stylesheet" href="./input.css" />
+    <link rel="stylesheet" href="./result-box.css" />
   </head>
   <body>
-    <input class="input" placeholder="0" />
+    <div class="result-box">
+      <h2 class="title title--white">Tip amount</h2>
+      <span class="result-box__result">$0.00</span>
+    </div>
   </body>
 </html>
