--- a/tip-calculator/styles/base.css
+++ b/tip-calculator/styles/base.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
+* {
+  font-family: "Space Mono", monospace;
+}
 body {
   background-color: hsl(185, 41%, 84%);
   color: hsl(183, 100%, 15%);
-  font-family: "Space Mono", monospace;
 }
