--- a/tip-calculator/styles/components/input.css
+++ b/tip-calculator/styles/components/input.css
@@ -11,3 +11,7 @@
 .input::placeholder {
   color: hsl(184, 14%, 56%);
 }
+.input:active,
+.input:focus {
+  border: 2px solid hsl(172, 67%, 45%);
+}
